<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<RadioGroup
		android:id="@+id/movieList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
	    <RadioButton
	        android:id="@+id/theMatrix"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/the_matrix"
	        android:checked="true"
	        />
	    <RadioButton
	        android:id="@+id/theHobbit"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/the_hobbit"
	        />
	    <RadioButton
	        android:id="@+id/theAvengers"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/the_avengers"
	        />
	    <RadioButton
	        android:id="@+id/reignOverMe"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/reign_over_me"
	        />
	    <RadioButton
	        android:id="@+id/intoTheWild"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/into_the_wild"
	        />
	    <RadioButton
	        android:id="@+id/wallE"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/wall_e"
	        />    
	</RadioGroup>
</ScrollView>